Initial implementation on Plan

--- a/Hannibal/Hannibal.fsproj
+++ b/Hannibal/Hannibal.fsproj
@@ -5,16 +5,12 @@
     <IsPackable>false</IsPackable>
   </PropertyGroup>
 
-  <PropertyGroup>
-    <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
-    <GenerateBindingRedirectsOutputType>true</GenerateBindingRedirectsOutputType>
-  </PropertyGroup>
-
   <ItemGroup>
     <Compile Include="Hannibal.Http.fs" />
     <Compile Include="Hannibal.Plan.fs" />
     <Compile Include="Hannibal.Reports.fs" />
     <Compile Include="HttpTests.fs" />
+    <Compile Include="PlanTests.fs" />
     <Compile Include="Program.fs" />
   </ItemGroup>
 
@@ -23,6 +19,10 @@
     <PackageReference Include="xunit" Version="2.3.1" />
     <PackageReference Include="xunit.runner.visualstudio" Version="2.3.1" />
     <DotNetCliToolReference Include="dotnet-xunit" Version="2.3.1" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Update="System.ValueTuple" Version="4.4.0" />
   </ItemGroup>
 
 </Project>
